@@ -60,6 +60,7 @@ rc_bool_keys = [
 rc_other = [
     'proxy_servers',
     'root_dir',
+    'recipes_dir',
     ]
 
 user_rc_path = abspath(expanduser('~/.condarc'))
@@ -217,3 +218,6 @@ disallow = set(rc.get('disallow', []))
 # packages which are added to a newly created environment by default
 create_default_packages = list(rc.get('create_default_packages', []))
 track_features = set(rc.get('track_features', '').split())
+
+recipes_dir = rc.get('recipes_dir', join(root_dir, 
+                                                'conda-recipes'))
